mail/templates/default/app.css
/* ... */
#mail-index_mailSplitter .splitter-bar-horizontal {background: white;}

#calendar-meeting table.et2_grid.meetingRequest td {
	padding-left: 8px !important;
}
#mail-index_mailPreviewContainer {
	height: calc(100% - 13em);
	border-top: 1px solid silver;
	margin-bottom: 0;
}

#mail-index_nm .mail.row et2-url-email_ro {width: fit-content}
#mail-index_nm  .et2_label.et2_vfs {text-align: center}

.et2_nextmatch .egwGridView_outer .egwGridView_scrollarea tbody tr.row_category td:first-child>div {
	margin-left: 0px;
}
#mail-index_nm tbody tr et2-lavatar {max-width: 3.7em; min-width:3.7em !important;}

.previewWrapper .firstColumnTitle {
	max-width: 4em;
	text-align: end;
	min-width: 4em;
}
.mailPreviewHeaders et2-select-email::part(control) {
	border: none;
}
#popupMainDiv {height: 100%}
.treeContainer {height: calc(100% - 100px)}
#mail-index_mail-index-header_right {gap: 1ex;}
#mail-index_mail-index-header_right et2-details.vacationnotice {
	min-width: 8em;
}
#mail-index_mail-index-header_right et2-details.vacationnotice::part(base) {
	background: #dee9f3;
	border-color: #0f65968f;
	border-width: 1px;
	height: 2.6em;
}

